# TMS_posts

./: pyproject.toml
css/: forms.css  main.css
posts/: admin.py  models.py  service.py  views.py
posts/api/: permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_note_content_alter_note_mod_time_and_more.py  0003_alter_note_options.py
project/: settings.py  urls.py
templates/: about.html  base.html  create_form.html  edit_form.html  footer.html  home.html  menu.html  note.html  posts-list.html  profile.html  welcome.html
templates/admin/: change_form.html
templates/registration/: login.html  register.html
